--- a/tabela.css
+++ b/tabela.css
@@ -1,5 +1,6 @@
 table {
     border-collapse: collapse;
+    background-color: #4d4c4c;
 }
 
 td, th {
@@ -7,9 +8,12 @@ td, th {
     text-align: center;
     padding: 8px;
 }
-tr:nth-child(even) {
-    background-color: #A29471;
+
+th{
+	background-color: #272525;
+	color: #679665;
 }
 
-
-tr:hover {background-color: #c3ad;}
+tr:hover{
+    background-color: #BFEFFF;
+}
