--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 body{
-	background-color: #999999;
+	background-color: #666666;/*#999999;*/
 }
 
 #grafico_Consumo_em_W{
@@ -28,21 +28,21 @@ body{
 table{
 	border-collapse: collapse;
 	cursor: default;
+	width: 65em; 
 }
 
 th.tb_escolheGrafico_TD{
 	text-align: center;
     padding: 0.6em;
 }
-
 th.tb_escolheGrafico_TD:hover{
-	background-color: #add8e6;
+	background-color: #8ac9db;
 	cursor: pointer;
 }
 
 #tabelaPotencia, #tabelaConsumo {
     border-collapse: collapse;
-    background-color: #222222;
+    background-color: #4d4d4d;
 }
 
 td, th {
@@ -52,11 +52,15 @@ td, th {
 
 th.tb_potTH, th.tb_escolheGrafico_TD{
 	background-color: #393939;
-	color: #dc143c;
+	color: #FFF;
+}
+
+h3{
+	color: #fff;
 }
 td.tb_potTD{
-	color: #808080;
+	color: #fff;
 }
 tr.tb_potTR:hover{
-	background-color: #add8e6;
+	background-color: #8ac9db;
 }
